force-app/main/default/objects/GPL_Profile__c/GPL_Profile__c.object-meta.xml
<CustomObject>
    <label>GPL Profile</label>
    <nameField>
        <displayFormat>GPL_P-{0000}</displayFormat>
        <label>GPL Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPL Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>