force-app/main/default/objects/GPL_Profile__c/fields/Board_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Board_Certificates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Board Certificates</label>
    <length>48</length>
    <type>Text</type>
</CustomField>