force-app/main/default/objects/GPL_Profile__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <formula>IF (Contact__c != null,TEXT(Contact__r.Contact_Title__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>