force-app/main/default/objects/GPL_Profile__c/fields/Devices__c.field-meta.xml
<CustomField>
    <fullName>Devices__c</fullName>
    <label>Devices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adkins Strut</fullName>
            </value>
            <value>
                <fullName>Chondrofix</fullName>
            </value>
            <value>
                <fullName>Early Intervention</fullName>
            </value>
            <value>
                <fullName>Gel-One</fullName>
            </value>
            <value>
                <fullName>Oxford Partial Knee</fullName>
            </value>
            <value>
                <fullName>Patient Specific Instruments</fullName>
            </value>
            <value>
                <fullName>Pectus Bar</fullName>
            </value>
            <value>
                <fullName>Persona Knee System</fullName>
            </value>
            <value>
                <fullName>PFJ</fullName>
            </value>
            <value>
                <fullName>RibFix Blu</fullName>
            </value>
            <value>
                <fullName>SternaLock 360</fullName>
            </value>
            <value>
                <fullName>SternaLock Blu</fullName>
            </value>
            <value>
                <fullName>Trabecular Metal Total Ankle</fullName>
            </value>
            <value>
                <fullName>Vanguard</fullName>
            </value>
            <value>
                <fullName>VitaminE</fullName>
            </value>
            <value>
                <fullName>Vivacit-E-Hip Construct</fullName>
            </value>
            <value>
                <fullName>XP</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Signature Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>