force-app/main/default/objects/GPL_Profile__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>