force-app/main/default/objects/GPL_Profile__c/fields/Fellowship__c.field-meta.xml
<CustomField>
    <fullName>Fellowship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellowship</label>
    <type>TextArea</type>
</CustomField>