force-app/main/default/objects/GPL_Profile__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <formula>IF (Account__c != null, Account__r.FirstName,
    IF (Contact__c != null, Contact__r.FirstName,&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>