force-app/main/default/objects/GPL_Profile__c/fields/GPL_Physician_Locator__c.field-meta.xml
<CustomField>
    <fullName>GPL_Physician_Locator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPL Physician Locator</label>
    <type>Checkbox</type>
</CustomField>