force-app/main/default/objects/GPL_Profile__c/fields/Groups__c.field-meta.xml
<CustomField>
    <fullName>Groups__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Groups</label>
    <type>TextArea</type>
</CustomField>