force-app/main/default/objects/GPL_Profile__c/fields/Honors__c.field-meta.xml
<CustomField>
    <fullName>Honors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Honors</label>
    <type>TextArea</type>
</CustomField>