force-app/main/default/objects/GPL_Profile__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <formula>IF (Account__c != null, Account__r.LastName,
    IF (Contact__c != null, Contact__r.LastName,&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>