force-app/main/default/objects/GPL_Profile__c/fields/Location_Count__c.field-meta.xml
<CustomField>
    <fullName>Location_Count__c</fullName>
    <label>Location Count</label>
    <summaryForeignKey>GPL_Location__c.GPL_Profile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>