force-app/main/default/objects/GPL_Profile__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Locations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>