force-app/main/default/objects/GPL_Profile__c/fields/MasterId__c.field-meta.xml
<CustomField>
    <fullName>MasterId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Master ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>