force-app/main/default/objects/GPL_Profile__c/fields/MedicalSchool__c.field-meta.xml
<CustomField>
    <fullName>MedicalSchool__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical School</label>
    <type>TextArea</type>
</CustomField>