force-app/main/default/objects/GPL_Profile__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF (!ISBLANK(Account__c), 
IF (Account__r.IsPersonAccount, 
IF (!ISNULL(TEXT(Account__r.Salutation)),TEXT(Account__r.Salutation) &amp; &quot; &quot;,null) &amp; Account__r.FirstName &amp; &quot; &quot; &amp; Account__r.LastName, 
Account__r.Name), 
IF (!ISNULL(TEXT(Contact__r.Salutation)),TEXT(Contact__r.Salutation) &amp; &quot; &quot;,null) &amp; Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>