force-app/main/default/objects/GPL_Profile__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>IF (!ISBLANK(Account__c), HYPERLINK(Account__c, IF (Account__r.IsPersonAccount,Account__r.FirstName &amp; &quot; &quot; &amp; Account__r.LastName, Account__r.Name), &quot;_self&quot;),  HYPERLINK(Contact__c, Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent</label>
    <type>Text</type>
</CustomField>