force-app/main/default/objects/GPL_Profile__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <formula>IF(Account__c!=null,Account__c,Contact__c)</formula>
    <label>Parent ID</label>
    <type>Text</type>
</CustomField>