force-app/main/default/objects/GPL_Profile__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IF (!ISNULL(PhotoId__c), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; PhotoId__c,&quot;&quot;,150,150),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>