force-app/main/default/objects/GPL_Profile__c/fields/PhotoId__c.field-meta.xml
<CustomField>
    <fullName>PhotoId__c</fullName>
    <formula>IF ( ISBLANK(Picture_Id__c ),
 IF (Account__c != null,  Account__r.Account_Picture_Id__c, 
  IF (Contact__c != null,  Contact__r.btydev__Picture_Id__c, null)
 ),Picture_Id__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo ID</label>
    <type>Text</type>
</CustomField>