force-app/main/default/objects/GPL_Profile__c/fields/PreferredFirstName__c.field-meta.xml
<CustomField>
    <fullName>PreferredFirstName__c</fullName>
    <formula>IF (!ISBLANK(PreferredName__c),PreferredName__c,
  IF (Account__c != null,  Account__r.Preferred_Name__c ,&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred First Name</label>
    <type>Text</type>
</CustomField>