force-app/main/default/objects/GPL_Profile__c/fields/PreferredName__c.field-meta.xml
<CustomField>
    <fullName>PreferredName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PreferredName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>