force-app/main/default/objects/GPL_Profile__c/fields/Procedures__c.field-meta.xml
<CustomField>
    <fullName>Procedures__c</fullName>
    <label>Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anterior Hip Replacement</fullName>
            </value>
            <value>
                <fullName>Anterior Supine</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>Mobi-C Cervical Disc Replacement</fullName>
            </value>
            <value>
                <fullName>mymobility® Mobile App</fullName>
            </value>
            <value>
                <fullName>Partial Knee Replacement</fullName>
            </value>
            <value>
                <fullName>ROSA® Knee</fullName>
            </value>
            <value>
                <fullName>ROSA® Spine</fullName>
            </value>
            <value>
                <fullName>ROSA ONE® Brain</fullName>
            </value>
            <value>
                <fullName>Subchondroplasty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>