force-app/main/default/objects/GPL_Profile__c/fields/Publications__c.field-meta.xml
<CustomField>
    <fullName>Publications__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Publications</label>
    <type>TextArea</type>
</CustomField>