force-app/main/default/objects/GPL_Profile__c/fields/Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Residency</label>
    <type>TextArea</type>
</CustomField>