force-app/main/default/objects/GPL_Profile__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <formula>IF (Account__c != null, 
	IF (ISPICKVAL(Account__r.Salutation, &apos;Mr.&apos;), &apos;Mr.&apos;, 
		IF (ISPICKVAL(Account__r.Salutation, &apos;Ms.&apos;), &apos;Ms.&apos;,
			IF (ISPICKVAL(Account__r.Salutation, &apos;Mrs.&apos;), &apos;Mrs.&apos;,
				IF (ISPICKVAL(Account__r.Salutation, &apos;Dr.&apos;), &apos;Dr.&apos;,
					IF (ISPICKVAL(Account__r.Salutation, &apos;Prof.&apos;), &apos;Prof.&apos;, null)
				)
			)
		)
	),
	IF (Contact__c != null,
		IF (ISPICKVAL(Contact__r.Salutation, &apos;Mr.&apos;), &apos;Mr.&apos;, 
			IF (ISPICKVAL(Contact__r.Salutation, &apos;Ms.&apos;), &apos;Ms.&apos;,
				IF (ISPICKVAL(Contact__r.Salutation, &apos;Mrs.&apos;), &apos;Mrs.&apos;,
					IF (ISPICKVAL(Contact__r.Salutation, &apos;Dr.&apos;), &apos;Dr.&apos;,
						IF (ISPICKVAL(Contact__r.Salutation, &apos;Prof.&apos;), &apos;Prof.&apos;, null)
					)
				)
			)
		), 
		null
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>