force-app/main/default/objects/GPL_Profile__c/fields/Specialties__c.field-meta.xml
<CustomField>
    <fullName>Specialties__c</fullName>
    <label>Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cardiothoracic</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Foot and Ankle</fullName>
            </value>
            <value>
                <fullName>General Surgery/Trauma</fullName>
            </value>
            <value>
                <fullName>Hand and Wrist</fullName>
            </value>
            <value>
                <fullName>Heart Surgery</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Knee Pain Injection</fullName>
            </value>
            <value>
                <fullName>Orthopedic Trauma</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pectus Surgery</fullName>
            </value>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>ROSA Knee Robotics</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Spine/Back</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Thoracic</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>