force-app/main/default/objects/GPL_Profile__c/fields/Specialty_Type__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Type__c</fullName>
    <label>Specialty Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bone Grafting</fullName>
            </value>
            <value>
                <fullName>Cosmetic Dentistry</fullName>
            </value>
            <value>
                <fullName>Endodontics</fullName>
            </value>
            <value>
                <fullName>General Dentistry</fullName>
            </value>
            <value>
                <fullName>Implant Dentistry</fullName>
            </value>
            <value>
                <fullName>Oral Surgery</fullName>
            </value>
            <value>
                <fullName>Periodontics</fullName>
            </value>
            <value>
                <fullName>Prosthodontics</fullName>
            </value>
            <value>
                <fullName>Ridge Augmentation</fullName>
            </value>
            <value>
                <fullName>Sinus Lifts</fullName>
            </value>
            <value>
                <fullName>Site Preservation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>