force-app/main/default/objects/GPL_Profile__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <formula>IF (Account__c != null, 
IF (ISPICKVAL(Account__r.Suffix__c, &apos;Jr.&apos;), &apos;Jr.&apos;, 
IF (ISPICKVAL(Account__r.Suffix__c, &apos;Sr.&apos;), &apos;Sr.&apos;,
IF (ISPICKVAL(Account__r.Suffix__c, &apos;II&apos;), &apos;II&apos;,
IF (ISPICKVAL(Account__r.Suffix__c, &apos;III&apos;), &apos;III&apos;,
IF (ISPICKVAL(Account__r.Suffix__c,&apos;IV&apos;),&apos;IV&apos;,
IF (ISPICKVAL(Account__r.Suffix__c,&apos;V&apos;),&apos;V&apos;,
IF (ISPICKVAL(Account__r.Suffix__c, &apos;VI&apos;), &apos;VI&apos;, null)
)
)
)
)
)
),&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suffix</label>
    <type>Text</type>
</CustomField>