force-app/main/default/objects/GPL_Profile__c/fields/Surgeon_Country__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Country__c</fullName>
    <formula>Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surgeon Country</label>
    <type>Text</type>
</CustomField>