force-app/main/default/objects/GPL_Profile__c/fields/Surgical_Interests__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Interests__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surgical Interests</label>
    <length>48</length>
    <type>Text</type>
</CustomField>