force-app/main/default/objects/GPL_Profile__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>