force-app/main/default/objects/GPL_Profile__c/fields/Under_Graduate__c.field-meta.xml
<CustomField>
    <fullName>Under_Graduate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Under Graduate Education</label>
    <type>TextArea</type>
</CustomField>