force-app/main/default/objects/GPL_Profile__c/fields/Years_in_Practice__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Practice__c</fullName>
    <label>Years in Practice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>