force-app/main/default/objects/GPL_Profile__c/fields/YouTube__c.field-meta.xml
<CustomField>
    <fullName>YouTube__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>YouTube</label>
    <type>Url</type>
</CustomField>