force-app/main/default/objects/GPL_Profile__c/recordTypes/GPL_ClinicProfile.recordType-meta.xml
<RecordType>
    <fullName>GPL_ClinicProfile</fullName>
    <active>true</active>
    <label>GPL Clinic Profile</label>
</RecordType>