force-app/main/default/objects/GPL_Profile__c/recordTypes/GPL_DentistProfile.recordType-meta.xml
<RecordType>
    <fullName>GPL_DentistProfile</fullName>
    <active>true</active>
    <label>GPL Dentist Profile</label>
</RecordType>