force-app/main/default/objects/GPL_Profile__c/recordTypes/GPL_PhysicianProfile.recordType-meta.xml
<RecordType>
    <fullName>GPL_PhysicianProfile</fullName>
    <active>true</active>
    <label>GPL Physician Profile</label>
</RecordType>