force-app/main/default/objects/GPL_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>ParentId__c</columns>
    <columns>MedicalSchool__c</columns>
    <columns>Specialties__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>CRMAdministrator</role>
        <role>InformationTechnology</role>
    </sharedTo>
</ListView>