force-app/main/default/objects/GPL_Profile__c/listViews/GPL_Dentist_Profiles.listView-meta.xml
<ListView>
    <fullName>GPL_Dentist_Profiles</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Email_Address__c</columns>
    <columns>MedicalSchool__c</columns>
    <columns>Residency__c</columns>
    <columns>Years_in_Practice__c</columns>
    <columns>Under_Graduate__c</columns>
    <columns>Specialty_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GPL_Profile__c.GPL_DentistProfile</value>
    </filters>
    <label>GPL Dentist Profiles</label>
    <language>en_US</language>
    <sharedTo>
        <role>CRMAdministrator</role>
        <role>InformationTechnology</role>
    </sharedTo>
</ListView>